styles/floxStyle.css
html, body {
	height: 100%;
	overflow: hidden;
	font-family: Tahoma, Geneva, sans-serif;
}

.background {
	padding: 0px;
	margin: 0px;
  	pointer-events: all;
}

#mouseBlocker {
	position: absolute;
	margin: 0px;
	width: 100%;
	height: 100%;
	pointer-events: all;
	background-color: rgb(235,235,242);
}

#loadingMessage {
	position: absolute;
	width: 100px;
	height: 39px;;
	text-align: center;
	pointer-events: all;
	font-size: 12pt;
	color: white;
	whitespace: nowrap;
	top: 50%;
	left: 50%;
	margin: -20px 0 0 -50px;
	z-index: 5;
}

#map {
	width: 100%;
	height: 100%;
    font: 10pt;
    margin: 0px;
    padding: 0px;
}

#mapFeaturesLayer {
	padding: 0px;
	margin: 0px;
}

#titleText {
	position: absolute;
	width: auto;
	text-align: center;
	position: fixed;
	margin: 0 auto;
  	left: 0;
	right: 0;
	pointer-events: none;
	font-size: 16pt;
	font-weight: bold;
	color: rgb(90, 90, 90);
}

#creditText {
	position: absolute;
	width: auto;
	height: auto;
	bottom: 0;
	right: 0;	
	font-size: 7pt;
	margin-right: 4px;
	margin-bottom: 2px;
	text-align: right;
	line-height: 110%;
}

.legendTitle {
	color: white;
	font-size: 16px;
	line-height: 110%;
}

#legendItemContainer {
	width: 100%;
	height: auto;
}



#newProgressBar {
	box-shadow: 2px 2px 2px rgba(64,64,64,0.5);
	display: inline-block;
	height: 3px;
	background: rgb(255, 255, 255);
    background: rgba(255, 255, 255, 0.7);
	width: 400px;
	margin-left: 10px;
}

#newProgress {
	height: 3px;
	width: 50%;
	margin: 0px;
	background: rgb(64, 64, 64);
    background: rgba(64, 64, 64, 0.9);
}







#subtitleText {
	height: 22px;
	text-align: center;
	display: inline-block;
	pointer-events: none;
	font-size: 12pt;
	color: white;
	whitespace: nowrap;
}


#hintText {
	color: white;
	margin-bottom: 3px;
	margin-top: -1px;
}

.panelButtonContainer {
	display: inline-block;
	width: 60px;
	height: 50px;
	position: relative;
	border: transparent;
	border-style: solid;
	border-width: 1px;
	border-radius: 5px;
	margin-right: 2px;
	margin-left: 2px;
}

.panelButtonContainer.bordered {
	border-style: solid;
	border-color: rgb(180,180,180);
}

.panelButtonContainer.hover {
	border-color: rgb(255,255,255);
	
}

.panelButtonContainer.mousedown {
	background-color: white;
}

.panelButtonContainer img {
	max-height: 100%;
	max-width: 100%;
	display: block;
	position: absolute;
	vertical-align: middle;
	top: 0;  
    bottom: 0;  
    left: 0;  
    right: 0;  
    margin: auto;
    padding: 2px;
    pointer-events: none;
    -ms-user-select: none;
    -khtml-user-select: none;
    -o-user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
}





.UIPanel {
	background: rgb(64, 64, 64);
    background: rgba(64, 64, 64, 0.9);
    box-shadow: 3px 3px 3px rgba(64,64,64,0.5);
    pointer-events: all;
    padding: 8px;
}

.UIPanelTab:hover {
	background: rgb(100, 100, 100);
    /*background: rgba(90, 90, 90, 0.9);*/
	z-index: 1;
}

/* Sliding Panel Stuff ---------------------------- */

#slidingPanel {
	position: absolute;
	width: 500px;
	height: 117px;
	position: fixed;
	bottom: -150px;
	margin: 0 auto;
  	left: 0;
	right: 0;
    pointer-events: none; /* Allows pointer events to pass through! */
}

#slidingPanelContent {
	padding: 5px;
	height: 102px;
	border-radius: 5px 5px 0px 0px;
	text-align:center;
}

#slidingPanelTab {
	display: inline-block;
	margin-left: 15px;
	margin-bottom: -5px;
	width: 40px;
	height: 18px;
	border-radius: 2px 2px 0px 0px;
}

#slidingPanelContent ul {
	list-style-type:none;
	margin: 0px auto;
	padding-left: 0;
	font-size: 0;
	bottom: 0px;
}

#slidingPanelContent ul li {
	display: inline;
	margin: 0px;
	z-index: 2;
	text-align: center;
}

#legendSlidingPanel {
	position: absolute;
	width: 222px;
	height: auto;
	position: fixed;
	bottom: 0px;
	left: -250px;
	pointer-events: none;
}

#legendSlidingPanelContent {
    border-radius: 0px 5px 0px 0px;
    height: auto;
    width: 204px;
    padding: 8px;
}

#legendSlidingPanelTab {
	width: 18px;
	height: 40px;
	border-radius: 0px 2px 2px 0px;
	float: right;
	margin-top: 15px;

}

#optionsSlidingPanel {
	position: absolute;
	width: 185px;
	height: auto;
	position: fixed;
	top: 40px;
	right: -250px;
	pointer-events: none;
}

#optionsSlidingPanelContent {
	border-radius: 5px 0px 0px 5px;
    height: auto;
    width: 167px;
    display: inline-block;
    color: white;
}

#optionsSlidingPanelContent .checkbox {
	margin-top: 0px;
}

#optionsSlidingPanelTab {
	width: 18px;
	height: 40px;
	border-radius: 2px 0px 0px 2px;
	margin-top: 15px;
	float: left;
}
 

/* END Sliding Panel Stuff ----------------------- */






.floxTooltip {
	position: absolute;
	text-align: left;
	width: auto;
	height: auto;
	padding: 0px 5px 2px 5px;
	margin-top: -10px;
	background: rgb(64, 64, 64);
    background: rgba(64, 64, 64, 0.9);
    box-shadow: 3px 3px 3px rgba(64,64,64,0.5);
    border-radius: 2px 2px 2px 2px;
	pointer-events: none;
	color: white;
}

.tooltipValue {
	font-weight: bold;
	font-size: 21px;

}

.optionsMenuHeader {
	font-size: 14px;
	margin-bottom: 0px;
}

.radio {
	margin-top: 0px;
	margin-bottom: 3px;
	margin-left: 7px;
}

.tooltipTypeHolder {
	font-size: 8.5px;
	display: inline-block;
	line-height: 110%;
	letter-spacing: 1px;
}

.tooltipToFromText {
	line-height: 120%;
	margin-top: -2px;
}

.tooltipAreaName {
	font-size: 14px;
	margin-bottom: 0px;
	display: inline-block;
}


.tooltipInOutText {
	font-size: 10px;
	line-height: 200%;
}

.feature {
  cursor: default;
}

.feature.county {
  cursor: default;
}

.mesh {
  fill: none;
  stroke: #fff;
  stroke-linecap: round;
  stroke-linejoin: round;
  pointer-events: none;
}

.mesh.county {
	fill: none;
  stroke: #fff;
  stroke-linecap: round;
  stroke-linejoin: round;
  pointer-events: none;
}

p {
	font-size: 8.5pt;
}

.btn-group {
	margin-bottom: 3px;
}

.menuButton {
	font-size: 8.5pt;
	margin-bottom: 3px;
	display: block;
	padding: 2px 6px;
}

#coordinateDisplay {
	position: absolute;
	top: 5px;
	left: 5px;
	z-index: 2;
}

